--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,16 +45,12 @@ jobs:
         run: |
           echo "## ✅ JUnit Summary" >> $GITHUB_STEP_SUMMARY
 
-          # Buscar todos los XML de JUnit (surefire + failsafe)
           mapfile -t REPORTS < <(find . -type f \( -path "*/target/surefire-reports/*.xml" -o -path "*/target/failsafe-reports/*.xml" \))
-
           if [ ${#REPORTS[@]} -eq 0 ]; then
-            echo "" >> $GITHUB_STEP_SUMMARY
-            echo "_No se encontraron reportes JUnit (¿se ejecutaron tests?)._" >> $GITHUB_STEP_SUMMARY
+            echo "_No se encontraron reportes JUnit._" >> $GITHUB_STEP_SUMMARY
             exit 0
           fi
 
-          # Totales: tests, failures, errors, skipped
           totals=$(awk -F'"' '
             /<testsuite / {
               for (i=1;i<=NF;i++) {
@@ -77,14 +73,12 @@ jobs:
           echo "|------:|---------:|-------:|--------:|" >> $GITHUB_STEP_SUMMARY
           echo "| $T | $F | $E | $S |" >> $GITHUB_STEP_SUMMARY
 
-          # Archivos analizados
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "📂 Archivos analizados: ${#REPORTS[@]}" >> $GITHUB_STEP_SUMMARY
           for f in "${REPORTS[@]}"; do
             echo "- $(basename "$f")" >> $GITHUB_STEP_SUMMARY
           done
 
-          # Clases ejecutadas (nombre del testsuite)
           echo "" >> $GITHUB_STEP_SUMMARY
           mapfile -t CLASSES < <(awk -F'"' '/<testsuite /{ for(i=1;i<=NF;i++){ if($i ~ /name=/){ print $(i+1) } } }' "${REPORTS[@]}" | sort -u)
           echo "🧪 Clases de test: ${#CLASSES[@]}" >> $GITHUB_STEP_SUMMARY
@@ -128,8 +122,7 @@ jobs:
       - name: Boot backend (background)
         run: |
           nohup mvn -DskipTests spring-boot:run > backend.log 2>&1 &
-          echo "⏳ Esperando a que levante el backend..."
-          for i in {1..120}; do # hasta 4 minutos
+          for i in {1..120}; do
             if curl -sf http://localhost:8080/actuator/health > /dev/null; then 
               echo "✅ Backend UP"
               break
@@ -143,80 +136,44 @@ jobs:
           mkdir -p tests/k6 out/k6
           chmod 777 out/k6
 
-          # SMOKE
-          cat > tests/k6/smoke.js <<'JS'
-          import http from 'k6/http';
-          import { check, sleep } from 'k6';
-          export const options = { vus: 1, duration: '10s' };
-          const BASE = __ENV.API_BASE;
-          export default function () {
-            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
-            check(r, { "status 200": x => x.status === 200 });
-            sleep(1);
-          }
-          JS
-          # STRESS
-          cat > tests/k6/stress.js <<'JS'
-          import http from 'k6/http';
-          import { check } from 'k6';
-          export const options = {
-            stages: [
-              { duration: '20s', target: 20 },
-              { duration: '20s', target: 50 },
-              { duration: '20s', target: 100 },
-              { duration: '20s', target: 0 },
-            ],
-          };
-          const BASE = __ENV.API_BASE;
-          export default function () {
-            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
-            check(r, { "status 200": x => x.status === 200 });
-          }
-          JS
-          # SOAK
-          cat > tests/k6/soak.js <<'JS'
-          import http from 'k6/http';
-          import { check, sleep } from 'k6';
-          export const options = { vus: 10, duration: '2m' };
-          const BASE = __ENV.API_BASE;
-          export default function () {
-            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
-            check(r, { "status 200": x => x.status === 200 });
-            sleep(1);
-          }
-          JS
-          # SPIKE
-          cat > tests/k6/spike.js <<'JS'
-          import http from 'k6/http';
-          import { check } from 'k6';
-          export const options = {
-            stages: [
-              { duration: '5s', target: 5 },
-              { duration: '5s', target: 200 },
-              { duration: '10s', target: 5 },
-              { duration: '5s', target: 0 },
-            ],
-          };
-          const BASE = __ENV.API_BASE;
-          export default function () {
-            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
-            check(r, { "status 200": x => x.status === 200 });
-          }
-          JS
+          # Generar scripts para solicitudes y pagos
+          for endpoint in solicitudes pagos; do
+            for type in smoke stress soak spike; do
+              cat > tests/k6/${endpoint}_${type}.js <<'JS'
+              import http from 'k6/http';
+              import { check, sleep } from 'k6';
+              export const options = { vus: 1, duration: '10s' };
+              const BASE = __ENV.API_BASE;
+
+              export default function () {
+                let res;
+                if ("__ENDPOINT__" === "solicitudes") {
+                  res = http.post(`${BASE}/api/solicitudes/invitar-top3`);
+                  check(res, { "invitar-top3 ok": r => r.status === 200 });
+                } else {
+                  res = http.get(`${BASE}/api/pagos/ultimas`);
+                  check(res, { "pagos ultimas ok": r => r.status === 200 });
+                }
+                sleep(1);
+              }
+              JS
+              sed -i "s|__ENDPOINT__|$endpoint|g" tests/k6/${endpoint}_${type}.js
+            done
+          done
 
       - name: Run k6 (Docker)
         run: |
           mkdir -p out/k6
           chmod 777 out/k6
-          ls -l tests/k6   # 👈 debug, para confirmar que los scripts existen
-          for script in smoke stress soak spike; do
-            echo "▶️ Ejecutando $script.js"
+          ls -l tests/k6
+          for script in tests/k6/*.js; do
+            tag=$(basename $script .js)
+            echo "▶️ Ejecutando $tag"
             docker run --rm --network host -e API_BASE=${API_BASE} \
               -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 \
-              run /scripts/$script.js --summary-export=/out/$script.json || \
-              echo '{"metrics":{}}' > out/k6/$script.json
+              run /scripts/$tag.js --summary-export=/out/$tag.json || \
+              echo '{"metrics":{}}' > out/k6/$tag.json
           done
-
 
       - name: Subir artefactos k6
         uses: actions/upload-artifact@v4
