--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,13 +44,11 @@ jobs:
         if: always()
         run: |
           echo "## ✅ JUnit Summary" >> $GITHUB_STEP_SUMMARY
-
           mapfile -t REPORTS < <(find . -type f \( -path "*/target/surefire-reports/*.xml" -o -path "*/target/failsafe-reports/*.xml" \))
           if [ ${#REPORTS[@]} -eq 0 ]; then
-            echo "_No se encontraron reportes JUnit._" >> $GITHUB_STEP_SUMMARY
+            echo "_No se encontraron reportes JUnit (¿se ejecutaron tests?)._" >> $GITHUB_STEP_SUMMARY
             exit 0
           fi
-
           totals=$(awk -F'"' '
             /<testsuite / {
               for (i=1;i<=NF;i++) {
@@ -62,29 +60,14 @@ jobs:
             }
             END { printf "%d %d %d %d\n", T, F, E, S }
           ' "${REPORTS[@]}")
-
           T=$(echo "$totals" | awk '{print $1}')
           F=$(echo "$totals" | awk '{print $2}')
           E=$(echo "$totals" | awk '{print $3}')
           S=$(echo "$totals" | awk '{print $4}')
-
-          echo "" >> $GITHUB_STEP_SUMMARY
           echo "| Total | Failures | Errors | Skipped |" >> $GITHUB_STEP_SUMMARY
           echo "|------:|---------:|-------:|--------:|" >> $GITHUB_STEP_SUMMARY
           echo "| $T | $F | $E | $S |" >> $GITHUB_STEP_SUMMARY
-
-          echo "" >> $GITHUB_STEP_SUMMARY
           echo "📂 Archivos analizados: ${#REPORTS[@]}" >> $GITHUB_STEP_SUMMARY
-          for f in "${REPORTS[@]}"; do
-            echo "- $(basename "$f")" >> $GITHUB_STEP_SUMMARY
-          done
-
-          echo "" >> $GITHUB_STEP_SUMMARY
-          mapfile -t CLASSES < <(awk -F'"' '/<testsuite /{ for(i=1;i<=NF;i++){ if($i ~ /name=/){ print $(i+1) } } }' "${REPORTS[@]}" | sort -u)
-          echo "🧪 Clases de test: ${#CLASSES[@]}" >> $GITHUB_STEP_SUMMARY
-          for c in "${CLASSES[@]}"; do
-            echo "- $c" >> $GITHUB_STEP_SUMMARY
-          done
 
   k6-load:
     name: k6 (smoke/stress/soak/spike)
@@ -122,8 +105,9 @@ jobs:
       - name: Boot backend (background)
         run: |
           nohup mvn -DskipTests spring-boot:run > backend.log 2>&1 &
+          echo "⏳ Esperando a que levante el backend..."
           for i in {1..120}; do
-            if curl -sf http://localhost:8080/actuator/health > /dev/null; then 
+            if curl -sf http://localhost:8080/actuator/health > /dev/null; then
               echo "✅ Backend UP"
               break
             fi
@@ -136,28 +120,40 @@ jobs:
           mkdir -p tests/k6 out/k6
           chmod 777 out/k6
 
-          # Generar scripts para solicitudes y pagos
-          for endpoint in solicitudes pagos; do
-            for type in smoke stress soak spike; do
-              cat > tests/k6/${endpoint}_${type}.js <<'JS'
+          endpoints=(
+            "solicitudes_invitarTop3 POST /api/solicitudes/invitar-top3"
+            "solicitudes_crear POST /api/solicitudes/crear"
+            "solicitudes_cancelar PATCH /api/solicitudes/1/cancelar"
+            "pagos_crear POST /api/pagos"
+            "pagos_ultimas GET /api/pagos/ultimas"
+            "calificaciones_batch POST /api/prestadores/calificaciones"
+            "prestadores_sync POST /api/prestadores-sync"
+            "prestadores_sync_batch POST /api/prestadores-sync/batch"
+          )
+
+          for ep in "${endpoints[@]}"; do
+            name=$(echo "$ep" | cut -d' ' -f1)
+            method=$(echo "$ep" | cut -d' ' -f2)
+            path=$(echo "$ep" | cut -d' ' -f3)
+
+            for kind in smoke stress soak spike; do
+              cat > tests/k6/${name}_${kind}.js <<JS
               import http from 'k6/http';
               import { check, sleep } from 'k6';
-              export const options = { vus: 1, duration: '10s' };
+              export const options = kindOptions("${kind}");
               const BASE = __ENV.API_BASE;
-
               export default function () {
-                let res;
-                if ("__ENDPOINT__" === "solicitudes") {
-                  res = http.post(`${BASE}/api/solicitudes/invitar-top3`);
-                  check(res, { "invitar-top3 ok": r => r.status === 200 });
-                } else {
-                  res = http.get(`${BASE}/api/pagos/ultimas`);
-                  check(res, { "pagos ultimas ok": r => r.status === 200 });
-                }
-                sleep(1);
+                const res = http.request("${method}", \`\${BASE}${path}\`, method==="GET"?null:"{}", { headers: { "Content-Type": "application/json" } });
+                check(res, { "status 200": r => r.status === 200 });
+                if("${kind}"==="smoke" || "${kind}"==="soak") sleep(1);
+              }
+              function kindOptions(kind){
+                if(kind==="smoke") return { vus: 1, duration: "10s" };
+                if(kind==="stress") return { stages: [ { duration:"20s", target:20 },{ duration:"20s", target:50 },{ duration:"20s", target:100 },{ duration:"20s", target:0 } ]};
+                if(kind==="soak") return { vus: 10, duration: "2m" };
+                if(kind==="spike") return { stages: [ { duration:"5s", target:5 },{ duration:"5s", target:200 },{ duration:"10s", target:5 },{ duration:"5s", target:0 } ]};
               }
               JS
-              sed -i "s|__ENDPOINT__|$endpoint|g" tests/k6/${endpoint}_${type}.js
             done
           done
 
@@ -165,14 +161,13 @@ jobs:
         run: |
           mkdir -p out/k6
           chmod 777 out/k6
-          ls -l tests/k6
           for script in tests/k6/*.js; do
-            tag=$(basename $script .js)
-            echo "▶️ Ejecutando $tag"
+            name=$(basename "$script" .js)
+            echo "▶️ Ejecutando $name"
             docker run --rm --network host -e API_BASE=${API_BASE} \
               -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 \
-              run /scripts/$tag.js --summary-export=/out/$tag.json || \
-              echo '{"metrics":{}}' > out/k6/$tag.json
+              run /scripts/$name.js --summary-export=/out/$name.json || \
+              echo '{"metrics":{}}' > out/k6/$name.json
           done
 
       - name: Subir artefactos k6
