--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,42 +120,70 @@ jobs:
           mkdir -p tests/k6 out/k6
           chmod 777 out/k6
 
-          endpoints=(
-            "solicitudes_invitarTop3 POST /api/solicitudes/invitar-top3"
-            "solicitudes_crear POST /api/solicitudes/crear"
-            "solicitudes_cancelar PATCH /api/solicitudes/1/cancelar"
-            "pagos_crear POST /api/pagos"
-            "pagos_ultimas GET /api/pagos/ultimas"
-            "calificaciones_batch POST /api/prestadores/calificaciones"
-            "prestadores_sync POST /api/prestadores-sync"
-            "prestadores_sync_batch POST /api/prestadores-sync/batch"
-          )
+          # SMOKE
+          cat > tests/k6/smoke.js <<'JS'
+          import http from 'k6/http';
+          import { check, sleep } from 'k6';
+          export const options = { vus: 1, duration: '10s' };
+          const BASE = __ENV.API_BASE;
+          export default function () {
+            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
+            check(r, { "status 200": x => x.status === 200 });
+            sleep(1);
+          }
+          JS
 
-          for ep in "${endpoints[@]}"; do
-            name=$(echo "$ep" | cut -d' ' -f1)
-            method=$(echo "$ep" | cut -d' ' -f2)
-            path=$(echo "$ep" | cut -d' ' -f3)
+          # STRESS
+          cat > tests/k6/stress.js <<'JS'
+          import http from 'k6/http';
+          import { check } from 'k6';
+          export const options = {
+            stages: [
+              { duration: '20s', target: 20 },
+              { duration: '20s', target: 50 },
+              { duration: '20s', target: 100 },
+              { duration: '20s', target: 0 },
+            ],
+          };
+          const BASE = __ENV.API_BASE;
+          export default function () {
+            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
+            check(r, { "status 200": x => x.status === 200 });
+          }
+          JS
 
-            for kind in smoke stress soak spike; do
-              cat > tests/k6/${name}_${kind}.js <<JS
-              import http from 'k6/http';
-              import { check, sleep } from 'k6';
-              export const options = kindOptions("${kind}");
-              const BASE = __ENV.API_BASE;
-              export default function () {
-                const res = http.request("${method}", \`\${BASE}${path}\`, method==="GET"?null:"{}", { headers: { "Content-Type": "application/json" } });
-                check(res, { "status 200": r => r.status === 200 });
-                if("${kind}"==="smoke" || "${kind}"==="soak") sleep(1);
-              }
-              function kindOptions(kind){
-                if(kind==="smoke") return { vus: 1, duration: "10s" };
-                if(kind==="stress") return { stages: [ { duration:"20s", target:20 },{ duration:"20s", target:50 },{ duration:"20s", target:100 },{ duration:"20s", target:0 } ]};
-                if(kind==="soak") return { vus: 10, duration: "2m" };
-                if(kind==="spike") return { stages: [ { duration:"5s", target:5 },{ duration:"5s", target:200 },{ duration:"10s", target:5 },{ duration:"5s", target:0 } ]};
-              }
-              JS
-            done
-          done
+          # SOAK
+          cat > tests/k6/soak.js <<'JS'
+          import http from 'k6/http';
+          import { check, sleep } from 'k6';
+          export const options = { vus: 10, duration: '2m' };
+          const BASE = __ENV.API_BASE;
+          export default function () {
+            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
+            check(r, { "status 200": x => x.status === 200 });
+            sleep(1);
+          }
+          JS
+
+          # SPIKE
+          cat > tests/k6/spike.js <<'JS'
+          import http from 'k6/http';
+          import { check } from 'k6';
+          export const options = {
+            stages: [
+              { duration: '5s', target: 5 },
+              { duration: '5s', target: 200 },
+              { duration: '10s', target: 5 },
+              { duration: '5s', target: 0 },
+            ],
+          };
+          const BASE = __ENV.API_BASE;
+          export default function () {
+            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
+            check(r, { "status 200": x => x.status === 200 });
+          }
+          JS
+      
 
       - name: Run k6 (Docker)
         run: |
