--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -243,54 +243,92 @@ jobs:
           
 
   e2e-tests:
-      name: Cypress E2E
-      runs-on: ubuntu-latest
-      needs: k6-load
-      steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-node@v4
-          with:
-            node-version: 18.18.2
+    name: Cypress E2E
+    runs-on: ubuntu-latest
+    needs: k6-load
+    services:
+      postgres:
+        image: postgres:15
+        ports: [ "5432:5432" ]
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: root
+          POSTGRES_DB: ArreglaYaBackend
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+    env:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/ArreglaYaBackend
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: root
+      API_BASE: http://localhost:8080
 
-        - name: Install dependencies
-          run: npm install
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '17'
+          cache: maven
 
-        - name: Install node-fetch (fix Cypress config)
-          run: npm install node-fetch@2
-
-        - name: Run Cypress tests (JSON reporter)
-          run: |
-            mkdir -p out/cypress
-            npx cypress run \
-              --env API_BASE=http://localhost:8080 \
-              --reporter json \
-              --reporter-options "output=out/cypress/results.json" \
-              || true
-
-        - name: Subir artefactos Cypress
-          uses: actions/upload-artifact@v4
-          if: always()
-          with:
-            name: cypress-results
-            path: out/cypress/results.json
-
-        - name: Resumen Cypress
-          if: always()
-          run: |
-            sudo apt-get update && sudo apt-get install -y jq >/dev/null
-            echo "## 🧪 Cypress E2E Summary" >> $GITHUB_STEP_SUMMARY
-  
-            if [ -f out/cypress/results.json ]; then
-              total=$(jq '.stats.tests' out/cypress/results.json)
-              passed=$(jq '.stats.passes' out/cypress/results.json)
-              failed=$(jq '.stats.failures' out/cypress/results.json)
-              skipped=$(jq '.stats.skipped' out/cypress/results.json)
-              duration=$(jq '.stats.duration' out/cypress/results.json)
-  
-              echo "" >> $GITHUB_STEP_SUMMARY
-              echo "| Total | Passed | Failed | Skipped | Duration (ms) |" >> $GITHUB_STEP_SUMMARY
-              echo "|------:|-------:|-------:|--------:|--------------:|" >> $GITHUB_STEP_SUMMARY
-              echo "| $total | $passed | $failed | $skipped | $duration |" >> $GITHUB_STEP_SUMMARY
-            else
-              echo "_No Cypress results found._" >> $GITHUB_STEP_SUMMARY
+      - name: Boot backend (background)
+        run: |
+          nohup mvn -DskipTests spring-boot:run > backend.log 2>&1 &
+          echo "⏳ Esperando a que levante el backend..."
+          for i in {1..120}; do
+            if curl -sf http://localhost:8080/actuator/health > /dev/null; then 
+              echo "✅ Backend UP"
+              break
             fi
+            sleep 2
+          done
+          curl -s http://localhost:8080/actuator/health || (echo "❌ Backend no inició" && (cat backend.log || true) && exit 1)
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Install node-fetch (fix Cypress config)
+        run: npm install node-fetch@2
+
+      - name: Run Cypress tests (JSON reporter)
+        run: |
+          mkdir -p out/cypress
+          npx cypress run \
+          --env API_BASE=http://localhost:8080 \
+          --reporter json \
+          --reporter-options "output=out/cypress/results.json" \
+          || true
+
+      - name: Subir artefactos Cypress
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: cypress-results
+          path: out/cypress/results.json
+
+      - name: Resumen Cypress
+        if: always()
+        run: |
+          sudo apt-get update && sudo apt-get install -y jq >/dev/null
+          echo "## 🧪 Cypress E2E Summary" >> $GITHUB_STEP_SUMMARY
+
+          if [ -f out/cypress/results.json ]; then
+            total=$(jq '.stats.tests' out/cypress/results.json)
+            passed=$(jq '.stats.passes' out/cypress/results.json)
+            failed=$(jq '.stats.failures' out/cypress/results.json)
+            skipped=$(jq '.stats.skipped' out/cypress/results.json)
+            duration=$(jq '.stats.duration' out/cypress/results.json)
+
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "| Total | Passed | Failed | Skipped | Duration (ms) |" >> $GITHUB_STEP_SUMMARY
+            echo "|------:|-------:|-------:|--------:|--------------:|" >> $GITHUB_STEP_SUMMARY
+            echo "| $total | $passed | $failed | $skipped | $duration |" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "_No Cypress results found._" >> $GITHUB_STEP_SUMMARY
+          fi
