--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,78 +103,19 @@ jobs:
           cache: maven
       
   e2e-tests:
-    name: Cypress E2E
     runs-on: ubuntu-latest
-    needs: k6-load
-    services:
-      postgres:
-        image: postgres:15
-        ports: [ "5432:5432" ]
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: root
-          POSTGRES_DB: ArreglaYaBackend
-        options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-    env:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/ArreglaYaBackend
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: root
-      API_BASE: http://localhost:8080
-
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '17'
-          cache: maven
 
-      - name: Boot backend (background)
+      - name: Start backend
         run: |
-          nohup mvn -DskipTests spring-boot:run > backend.log 2>&1 &
-          echo "⏳ Esperando a que levante el backend..."
-          for i in {1..120}; do
-            if curl -sf http://localhost:8080/actuator/health > /dev/null; then 
-              echo "✅ Backend UP"
-              break
-            fi
-            sleep 2
-          done
-          curl -s http://localhost:8080/actuator/health || (echo "❌ Backend no inició" && (cat backend.log || true) && exit 1)
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 18
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Install node-fetch (fix Cypress config)
-        run: npm install node-fetch@2
+          nohup mvn spring-boot:run &
+          sleep 20 # espera a que levante
 
       - name: Run Cypress
-        run: npx cypress run --reporter mochawesome --reporter-options reportDir=cypress/results,overwrite=false,html=false,json=true
+        run: npx cypress run --reporter json --reporter-options output=results.json
 
-  
-
-      - name: Debug Cypress output
-        if: always()
-        run: |
-          echo "Buscando results.json en todo el repo..."
-          find . -type f -name "results.json"
-
-      - name: Subir artefactos Cypress
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: cypress-results
-          path: out/cypress
-
-      - name: Cypress Summary
+      - name: Publish summary
         run: |
           total=$(jq '.stats.tests' results.json)
           passed=$(jq '.stats.passes' results.json)
@@ -185,3 +126,9 @@ jobs:
           echo "| Total | Passed | Failed |" >> $GITHUB_STEP_SUMMARY
           echo "|-------|--------|--------|" >> $GITHUB_STEP_SUMMARY
           echo "| $total | $passed ✅ | $failed ❌ |" >> $GITHUB_STEP_SUMMARY
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: cypress-results
+          path: results.json
